syntax = "proto3";

package proto;

import "google/api/annotations.proto";


service RouteGuide {
    rpc GetName (Request) returns (Response){};
    rpc Echo(StringMessage) returns (StringMessage) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
    rpc GetInfo (Request) returns (Response) {
        option (google.api.http) = {
            get: "/v1/example/info"
        };
    };
}

message Request {
    string id = 1;
}

message Response {
    string name = 1;
}

message StringMessage {
    string value = 1;
}

